--- a/publications.html
+++ b/publications.html
@@ -152,12 +152,12 @@
 										<span class="image fit"><img src="images/publicationsBanner1.jpg" height="300" alt="" /></span>
 										
 										<h4>2019</h4>
-										<ul>
-											<li>Field, D., Berv, J.S., Hsiang, A. Y., Lanfear, R., Landis, M.J., Dornburg, A. Timing the extant avian radiation: the rise of modern birds and the importance of modelling molecular rate variation. In book: Pennaraptoran theropod dinosaurs: Past progress and new frontiers (pp.159-181). <i>Bulletin of the American Museum of Natural History</i>, New York<b><a href="#"> PDF</a></b></li>
-											<li>Phillips, A.J., Dornburg, A., Zapfe, K., James, S.W., Erseus, C., Anderson, F., Lemmon, A., Lemmon, E.M., Holland, S., Williams, B.W. Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution. <i>Genome Biology and Evolution</i> 11: 1712—1722<b><a href="#"> PDF</a></b></li>
-											<li>Near, T.J., Ghezelayagh, A., Ojeda, F.P., Dornburg, A. Recent diversification in an ancient lineage of Notothenioid fishes. <i>Polar Biology</i> 42: 943—952<b><a href="#"> PDF</a></b></li>
-											<li>Parker, C.E., Dornburg, A., Domínguez-Domínguez, O., Pillar, K.R. Assessing phylogenetic information to reveal uncertainty in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae). <i>Molecular Phylogenetics and Evolution</i> 134: 282—290<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from Gonatodes antillensis and a review of squamate reptiles acting as transport hosts. <i>Peabody Bulletin of Natural History</i> 60:55-79<b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Field D, Berv JS, Hsiang AY, Lanfear R, Landis MJ, Dornburg A. Timing the extant avian radiation: the rise of modern birds and the importance of modelling molecular rate variation. In book: Pennaraptoran theropod dinosaurs: Past progress and new frontiers (pp.159-181). <i>Bulletin of the American Museum of Natural History</i>, New York<b><a href="#"> PDF</a></b></li>
+											<li>Phillips AJ, Dornburg A, Zapfe K, James SW, Erseus C, Anderson F, Lemmon A, Lemmon EM, Holland S, Williams BW. Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution. <i>Genome Biology and Evolution</i> 11: 1712—1722<b><a href="#"> PDF</a></b></li>
+											<li>Near TJ, Ghezelayagh A, Ojeda FP, Dornburg A. Recent diversification in an ancient lineage of Notothenioid fishes. <i>Polar Biology</i> 42: 943—952<b><a href="#"> PDF</a></b></li>
+											<li>Parker CE, Dornburg A, Domínguez-Domínguez O, Pillar KR. Assessing phylogenetic information to reveal uncertainty in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae). <i>Molecular Phylogenetics and Evolution</i> 134: 282—290<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Lamb AD, Warren D, Watkins-Colwell G, Lewbart G, Flowers J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from Gonatodes antillensis and a review of squamate reptiles acting as transport hosts. <i>Peabody Bulletin of Natural History</i> 60:55-79<b><a href="#"> PDF</a></b></li></span>
 										</ul>
 
 										<span class="image fit"><img src="images/publicationsBanner4.jpg" height="300" alt="" /></span>
