--- a/media.html
+++ b/media.html
@@ -53,7 +53,7 @@
 						</header>
 						<section id="content">
 						<div class="div1"> 
-						<h3> Some articles that reference our work on SARS-CoV-2</h3>
+						<h3> Some popular articles that reference our work on SARS-CoV-2</h3>
 						<hr />
 						<section class="tiles">
 								<article class="style2">
@@ -136,7 +136,7 @@
 							</div>
 						<div class="div2"> 
 						<hr />
-							<h3> Selective coverage on our SARS-CoV-2 work</h3>
+							<h3> A selection of media coverage on our SARS-CoV-2 work</h3>
 						<hr />
 							<section class="tiles">
 								<article class="style2">
@@ -220,7 +220,7 @@
 						<hr />
 
 
-							<h3> Selective coverage of our macroevolution work</h3>
+							<h3> A selection of coverage concerning our macroevolution work</h3>
 						<hr />
 						<section class="tiles" id="test">
 								<article class="style2">
