--- a/media.html
+++ b/media.html
@@ -71,12 +71,12 @@
 						
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/media/TimeCover.png" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="https://time.com/6140281/covid-19-immunity-boosted-infected-safety/">
+										<h2>Time Magazine</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I'm Vaccinated, Boosted and Had COVID-19. Can I Go Back to Normal Now?<br>By Jamie Ducharme</p>
 										</div>
 									</a>
 								</article>
