--- a/current.html
+++ b/current.html
@@ -150,10 +150,11 @@
 								<div class="div9"> 
 
 										<a class="image left">
-										<img src=""
+										<img src="images/people/derrek.png"
 										alt="" /></a>
 									<b>Derrek Pope</b><br>
 									<i>Undergraduate, Senior</i><br>
+									Hi, I'm Derrek and I'm a senior graduating this summer at UNC Charlotte. I have always been interested in life sciences; I decided to study Bioinformatics specifically after enjoying a coding class and finding out that there was a degree focusing on both fields. My biggest biological interest lies in fungi, bacteria, and various other decomposer-type organisms and what they do to help maintain an ecological balance. As far as computing, I love making things that are useful to others, whatever that may entail. I have enjoyed learning various skills from the lab thus far and look forward to eventually becoming a professional within the field. I am currently working on resolving the evolutionary relationships of branchiobdellidans (the closest living relatives of leeches) using transcriptomic data with collaborators from the North Carolina Museum of Natural Sciences and the Smithsonian. 
 								</div>
 								<hr />
 								<div class="div10"> 
