--- a/current.html
+++ b/current.html
@@ -119,7 +119,7 @@
 										<img src="images/people/ManavAlt.png"
 										alt="" /></a>
 									<b>Manav Rohilla</b><br>
-									<i> Undergraduate, Sophomore</i><br>
+									<i> Undergraduate, Junior</i><br>
 										Hello! My name is Manav (it might take a couple tries to get it right)! I am a junior at UNC Charlotte and am studying Computer Science
 										with concentration in bioinformatics. I’ve been interested in how life on this planet has evolved with time since high school, and
 										bioinformatics is, in my opinion, one of the most interesting ways to analyze the evolutionary history that can be found within the
