--- a/current.html
+++ b/current.html
@@ -88,8 +88,18 @@
 								</div>
 								<hr />
 								<div class="div3"> 
+									<a class="image left">
+										<img src="#"
+										alt="" /></a>
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
+										I am a first-year PhD student in the department of Computing and Informatics at UNC Charlotte. I enrolled into the UNC Charlotte PhD Program directly from my 
+									undergraduate program at the Sarajevo School of Science and Technology, where I got my BSc in Computer Science. I have years of experience as a full-stack software 
+									engineer at various companies in Bosnia and Herzegovina, working mostly on software such as HRM platforms and Loyalty Card systems. Besides my professional career, 
+									I am interested in quite a few things, ranging from video games, technology, bioinformatics, all the way to politics and public discourse. My work at EvIL focuses on
+									creating an educational VR environment which will collect data on kids’ cognition based on their performance in the environment; this data will be used to model the 
+									way that children learn and figure out what the optimal ways of transferring knowledge through VR are. The implications of this work could be quite large, as we are 
+									moving towards a world where Virtual Reality is becoming a real tool for, among many other things, learning.
 								</div>
 								<hr />
 								<div class="div4">
