--- a/current.html
+++ b/current.html
@@ -89,7 +89,7 @@
 								<hr />
 								<div class="div3"> 
 									<a class="image left">
-										<img src="#"
+										<img src="images/people/Haris.jpg"
 										alt="" /></a>
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
