--- a/current.html
+++ b/current.html
@@ -90,7 +90,7 @@
 								<div class="div3"> 
 									<a class="image left">
 										<img src="#"
-										alt="" /></a>
+										alt="images/people/Haris2.jpg" /></a>
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
 										I am a first-year PhD student in the department of Computing and Informatics at UNC Charlotte. I enrolled into the UNC Charlotte PhD Program directly from my 
