--- a/current.html
+++ b/current.html
@@ -89,8 +89,8 @@
 								<hr />
 								<div class="div3"> 
 									<a class="image left">
-										<img src="#"
-										alt="images/people/Haris2.jpg" /></a>
+										<img src="images/people/Haris2.jpg"
+										alt="" /></a>
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
 										I am a first-year PhD student in the department of Computing and Informatics at UNC Charlotte. I enrolled into the UNC Charlotte PhD Program directly from my 
