--- a/publications.html
+++ b/publications.html
@@ -163,21 +163,21 @@
 										<span class="image fit"><img src="images/publicationsBanner4.jpg" height="300" alt="" /></span>
 										
 										<h4>2018</h4>
-										<ul>
-											<li>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dorn- burg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations.<i> Molecular Phylogenetics and Evolution</i> 129: 268—279<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. <i>Systematic Biology</i> 68: 145—156<b><a href="#"> PDF</a></b></li>
-											<li>Iglesias, T.L.*, Dornburg, A.*, Warren, D.L., Wainwright, P.C.,Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. <i>Journal of Evolutionary Biology</i> 31: 1082—1092(*co-first authors)<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specific example using Oyster Toadfish (Opsanus tau). <i>Ecology and Evolution</i> 8 (7):3609—3616<b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Near TJ, MacGuigan D, Parker CE, Jones C, Struthers C, Dornburg A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations.<i> Molecular Phylogenetics and Evolution</i> 129: 268—279<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Zhou S, Townsend JP. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. <i>Systematic Biology</i> 68: 145—156<b><a href="#"> PDF</a></b></li>
+											<li>Iglesias TL*, Dornburg A*, Warren DL, Wainwright PC, Schmitz L, Economo EP. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. <i>Journal of Evolutionary Biology</i> 31: 1082—1092(*co-first authors)<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Warren D, Zapfe K, Morris R, Lamb A, Hogue G, Lukas L, Wang R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specific example using Oyster Toadfish (Opsanus tau). <i>Ecology and Evolution</i> 8 (7):3609—3616<b><a href="#"> PDF</a></b></li></span>
 										</ul>
 
 										<span class="image fit"><img src="images/publicationsBanner5.jpg" height="300" alt="" /></span>
 										<h4>2017</h4>
-										<ul>
-											<li>Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity. <i>Nature Ecology and Evolution</i>. DOI: 10.1038/s41559-017-0239-y<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Townsend, J.P., Wang, Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In J.P Townsend & Z. Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). <i>Advances in Genetics</i> volume 100. Cambridge, MA: Academic Press<b><a href="#"> PDF</a></b></li>
-											<li>Lamb, A.J., Watkins-Colwell, G.C., Moore, J.A., Iglesias, T., Warren, D.L., Brandley, M.C., Dornburg, A. Endolymphatic sac use and reproductive activity in the Lesser Antilles endemic gecko <i>Gonatodes antillensis</i> (Gekkota: Spaerodactylidae). <i>Bulletin of the Peabody Museum of Natural History</i> 58(1):17—29<b><a href="#"> PDF</a></b></li>
-											<li>Chakrabarty, P, Faircloth, B.C., Ludt, W.B, McMahan, C.D., Near, T.J, Dornburg, A., Albert, J.S., Arroyave, J., Stiassny, M.J., Sorenson, L., Alfaro, M.E. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. <i>Systematic Biology</i> 66(6): 881—895<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Townsend, J.P., Spriggs, E., Eytan, R.I., Moore, J.A., Wainwright, P.C.,Lemmon, A.R., Moriarty Lemmon, E., Near, T.J. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. <i>Molecular Phylogenetics and Evolution</i> 110: 27—38<b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Dornburg A, Lamb A, Federman S, Jones C, Near TJ. Cradles and Museums of Antarctic Biodiversity. <i>Nature Ecology and Evolution</i>. DOI: 10.1038/s41559-017-0239-y<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Townsend JP, Wang Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In JP Townsend & Z Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). <i>Advances in Genetics</i> volume 100. Cambridge, MA: Academic Press<b><a href="#"> PDF</a></b></li>
+											<li>Lamb AJ, Watkins-Colwell GC, Moore JA, Iglesias T, Warren DL, Brandley MC, Dornburg A. Endolymphatic sac use and reproductive activity in the Lesser Antilles endemic gecko <i>Gonatodes antillensis</i> (Gekkota: Spaerodactylidae). <i>Bulletin of the Peabody Museum of Natural History</i> 58(1):17—29<b><a href="#"> PDF</a></b></li>
+											<li>Chakrabarty P, Faircloth BC, Ludt WB, McMahan CD, Near TJ, Dornburg A, Albert JS, Arroyave J, Stiassny MJ, Sorenson L, Alfaro ME. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. <i>Systematic Biology</i> 66(6): 881—895<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Townsend JP, Spriggs E, Eytan RI, Moore JA, Wainwright PC,Lemmon AR, Moriarty Lemmon E, Near TJ. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. <i>Molecular Phylogenetics and Evolution</i> 110: 27—38<b><a href="#"> PDF</a></b></li></span>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner8.jpg" height="300" alt="" /></span>
 										<h4>2016</h4>
