--- a/publications.html
+++ b/publications.html
@@ -181,13 +181,13 @@
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner8.jpg" height="300" alt="" /></span>
 										<h4>2016</h4>
-										<ul>
-											<li>Federman, S., Dornburg, A., Daly, D.C., Downie, A., Yoder, A.D., Sar- gis, E.J., Perry, G. H., Donoghue, M.J., Richard, A. F., Baden, A. L. Implications of lemuriform extinctions for the Malagasy flora. <i>Proceedings of Natural Academy of Sciences</i> 113: 5041—5046<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Forrestel, E., Moore, J.A., Iglesias, T.L., Jones, A., Rao, L., Warren, D.L. Fish at night: what we don’t know. Assessing sampling biases across studies of diel activity patterns in marine ray-finned fishes (Actinopterygii). <i>Bulletin of Marine Science</i> 93 (2): 611—639<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Smith, C., Federman, S., Moore, J.A., Warren, D.L., Iglesias, T., Brandley, M.C., Watkins-Colwell, G.J., Lamb, A.D., Jones, A. Disentangling the influence of urbanization and invasion on endemic reptiles in tropical biodiversity hotspots: A case study of Phyllodactylus martini along an urban gradient in Curaçao. <i>Peabody Bulletin of Natural History</i> 57: 147—164<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Federman, S., Eytan, R.I., Near, T.J. Cryptic species diversity in Sub-Antarctic islands: a case study of <i>Lepidonotothen</i>. Molecular Phylogenetics and Evolution</i> 104: 32—43<b><a href="#"> PDF</a></b></li>
-											<li>Collins, S., Dornburg, A., Flores, J., Dombrowski, D., Lewbart, G. A comparison of blood gases, biochemistry, and hematology to ecomorphology in a health assessment of pinfish (<i>Lagodon rhomboides</i>). <i>PeerJ</i>: e2262<b><a href="#"> PDF</a></b></li>
-											<li>Ahmad Sah, H. H., G.J. Watkins-Colwell, A. Dornburg, D.S. McLeod, L Grismer, A. M. Bauer, R. J. A. Wahab and T. U. Grafe. The Amphibians, Reptiles and Fishes of the 2012 Bukit Pagon Expedition, Brunei Darussalam. <i>Peabody Bulletin of Natural History</i> 57: 97—114<b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Federman S, Dornburg A, Daly DC, Downie A, Yoder AD, Sargis EJ, Perry GH, Donoghue, MJ, Richard AF, Baden AL. Implications of lemuriform extinctions for the Malagasy flora. <i>Proceedings of Natural Academy of Sciences</i> 113: 5041—5046<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Forrestel E, Moore JA, Iglesias TL, Jones A, Rao L, Warren DL. Fish at night: what we don’t know. Assessing sampling biases across studies of diel activity patterns in marine ray-finned fishes (Actinopterygii). <i>Bulletin of Marine Science</i> 93 (2): 611—639<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Smith C, Federman S, Moore JA, Warren DL, Iglesias T, Brandley MC, Watkins-Colwell GJ, Lamb AD, Jones A. Disentangling the influence of urbanization and invasion on endemic reptiles in tropical biodiversity hotspots: A case study of Phyllodactylus martini along an urban gradient in Curaçao. <i>Peabody Bulletin of Natural History</i> 57: 147—164<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Federman S, Eytan RI, Near TJ. Cryptic species diversity in Sub-Antarctic islands: a case study of <i>Lepidonotothen</i>. Molecular Phylogenetics and Evolution</i> 104: 32—43<b><a href="#"> PDF</a></b></li>
+											<li>Collins S, Dornburg A, Flores J, Dombrowski D, Lewbart GA. comparison of blood gases, biochemistry, and hematology to ecomorphology in a health assessment of pinfish (<i>Lagodon rhomboides</i>). <i>PeerJ</i>: e2262<b><a href="#"> PDF</a></b></li>
+											<li>Ahmad Sah HH, Watkins-Colwell GJ, Dornburg A, McLeod DS, Grismer L, Bauer AM, Wahab RJA, and Grafe TU. The Amphibians, Reptiles and Fishes of the 2012 Bukit Pagon Expedition, Brunei Darussalam. <i>Peabody Bulletin of Natural History</i> 57: 97—114<b><a href="#"> PDF</a></b></li></span>
 											</ul>
 											<span class="image fit"><img src="images/publicationsBanner9.jpg" height="300" alt="" /></span>
 										<h4>2015</h4>
