--- a/publications.html
+++ b/publications.html
@@ -202,37 +202,37 @@
 										</ul>
 											<span class="image fit"><img src="images/publicationsBanner10.jpg" height="300" alt="" /></span>
 										<h4>2014</h4>
-										<ul>
-											 <li>Dornburg, A., Moore, J., Beaulieu, J.M., Eytan, R.I., Near, T.J. The impact of shifts in marine biodiversity hotspots on patterns of range evolution: evidence from the Holocentridae (squirrelfishes and soldierfishes). <i>Evolution</i> 69:146—161 <b><a href="#"> PDF</a></b></li>
-											<li>Near, T.J. Dornburg, A., Friedman, M. Phylogenetic relationships and timing of diversification in gonorynchiform fishes inferred using nuclear gene DNA sequences (Teleostei: Ostariophysi). <i>Molecular Phylogenetics and Evolution </i>80:297—307 <b><a href="#"> PDF</a></b></li>
-											<li>Dornburg,A., Townsend, J.P., Near, T.J. Phylogenetic informativeness approaches reconcile ray-finned fish divergence times. <i>BMC Evolutionary Biology</i> 14 (1): 169 <b><a href="#"> PDF</a></b></li>
-											<li>Price,S.A., Schmitz, L., Oufiero, C.E., Eytan, R.I., Dornburg, A., Smith, W.L., Friedman, M., Near, T.J., Wainwright, P.C. Two waves of niche-filling straddling the K-Pg boundary formed the modern reef fish fauna. <i>Proceedings of the Royal Society B</i> 281: 2014321 <b><a href="#"> PDF</a></b></li>
-											<li>Moore, J. and Dornburg, A. Ingestion of fossil seashells, stones, and small mammal bones by gravid gopher tortoises (Gopherus polyphemus) in South Florida. <i>Peabody Bulletin of Natural History</i> 55: 55—63 <b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											 <li>Dornburg A, Moore J, Beaulieu JM, Eytan RI, Near TJ. The impact of shifts in marine biodiversity hotspots on patterns of range evolution: evidence from the Holocentridae (squirrelfishes and soldierfishes). <i>Evolution</i> 69:146—161 <b><a href="#"> PDF</a></b></li>
+											<li>Near TJ, Dornburg A, Friedman M. Phylogenetic relationships and timing of diversification in gonorynchiform fishes inferred using nuclear gene DNA sequences (Teleostei: Ostariophysi). <i>Molecular Phylogenetics and Evolution </i>80:297—307 <b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Townsend JP, Near TJ. Phylogenetic informativeness approaches reconcile ray-finned fish divergence times. <i>BMC Evolutionary Biology</i> 14 (1): 169 <b><a href="#"> PDF</a></b></li>
+											<li>Price SA, Schmitz L, Oufiero CE, Eytan RI, Dornburg A, Smith WL, Friedman M, Near TJ, Wainwright PC. Two waves of niche-filling straddling the K-Pg boundary formed the modern reef fish fauna. <i>Proceedings of the Royal Society B</i> 281: 2014321 <b><a href="#"> PDF</a></b></li>
+											<li>Moore J and Dornburg A. Ingestion of fossil seashells, stones, and small mammal bones by gravid gopher tortoises (Gopherus polyphemus) in South Florida. <i>Peabody Bulletin of Natural History</i> 55: 55—63 <b><a href="#"> PDF</a></b></li></span>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner11.jpg" height="300" alt="" /></span>
 										<h4>2013</h4>
-										<ul>
-											<li>Near, T.J., Dornburg, A., Eytan, R.I., Keck, B.P., Smith, W.L., Kuhn, K.L., Moore, J.A.,Price, S.A., Burbrink, F.T., Friedman, M., Wainwright, P.M. Phylogeny and tempo of diversification in the superradiation of spiny-rayed fishes. <i>Proceedings of the National Academy Sciences </i>110: 12738—12743 <b><a href="#"> PDF</a></b></li>
-											<li>Near, T.J., Dornburg, A., Tokita, M., Suzuki, D., Brandley, M.C., Friedman, M. Boom and bust: ancient and recent diversification in bichirs and ropefish (Polypteridae: Actinopterygii), a relictual lineage of ray-finned fishes. <i>Evolution</i> 68: 1014—1026 <b><a href="#"> PDF</a></b></li>
-											<li>Friedman, M., Keck, B.P., Dornburg, A., Eytan, R.I., Martin, C.H., Hulsey, C.D., Wainwright P.C., T.J. Near. Molecular and fossil evidence place the origin of cichlid fishes long after Gondwanan rifting. <i>Proceedings of the Royal Society B</i> 280:20131733 <b><a href="#"> PDF</a></b></li>
-											<li>Reynolds,R.G., Niemiller, M.L., Hedges, S.B., Dornburg, A., Revell, L.J. Molecular phylogeny and historical biogeography of West Indian boid snakes (Chilabothrus). <i>Molecular Phylogenetics and Evolution</i> 68: 461—470 <b><a href="#"> PDF</a></b></li>
-											<li>Santini, F., Sorenson, L., Marcroft, T. Dornburg, A., Alfaro, M.E. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodontiformes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Near TJ, Dornburg A, Eytan RI, Keck BP, Smith WL, Kuhn KL, Moore JA, Price SA, Burbrink FT, Friedman M, Wainwright PM. Phylogeny and tempo of diversification in the superradiation of spiny-rayed fishes. <i>Proceedings of the National Academy Sciences </i>110: 12738—12743 <b><a href="#"> PDF</a></b></li>
+											<li>Near TJ, Dornburg A, Tokita M, Suzuki D, Brandley MC, Friedman M. Boom and bust: ancient and recent diversification in bichirs and ropefish (Polypteridae: Actinopterygii), a relictual lineage of ray-finned fishes. <i>Evolution</i> 68: 1014—1026 <b><a href="#"> PDF</a></b></li>
+											<li>Friedman M, Keck BP, Dornburg A, Eytan RI, Martin CH, Hulsey CD, Wainwright PC, Near TJ. Molecular and fossil evidence place the origin of cichlid fishes long after Gondwanan rifting. <i>Proceedings of the Royal Society B</i> 280:20131733 <b><a href="#"> PDF</a></b></li>
+											<li>Reynolds RG, Niemiller ML, Hedges SB, Dornburg A, Revell LJ. Molecular phylogeny and historical biogeography of West Indian boid snakes (<i>Chilabothrus</i>). <i>Molecular Phylogenetics and Evolution</i> 68: 461—470 <b><a href="#"> PDF</a></b></li>
+											<li>Santini F, Sorenson L, Marcroft T, Dornburg A, Alfaro ME. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodontiformes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li></span>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner13.jpg" height="300" alt="" /></span>
 										<h4>2012</h4>
-										<ul>
-											<li>Near,T.J., Eytan, R.I., Dornburg, A., Kuhn, K.L, Moore, J.A., Wainwright, P., Friedman, M., Davis, M., Smith, L. Resolution of ray-finned fish phylogeny and timing of diversification. Proceedings of the National Academy Sciences 109: 13698–13703 <b><a href="#"> PDF</a></b></li>
-											<li>Dornburg, A., Moore, J.A., Webster, R., Warren, D.L., Brandley, M.C., Iglesias, T.L., Wainwright, P.C., and T.J. Near. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
-											<li>Near,T.J., Dornburg, A., Kuhn, K.L., Eastman, J.T., Pennington, J.N., Patarnello, T., Zane, L., Fernandez, D.A., Jones, C.D. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Near TJ, Eytan RI, Dornburg A, Kuhn KL, Moore JA, Wainwright P, Friedman M, Davis M, Smith L. Resolution of ray-finned fish phylogeny and timing of diversification. Proceedings of the National Academy Sciences 109: 13698–13703 <b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Moore JA, Webster R, Warren DL, Brandley MC, Iglesias TL, Wainwright PC, and Near TJ. Molecular phylogenetics of squirrelfishes and soldierfishes (Teleostei:Beryciformes: Holocentridae): reconciling more than 100 years of taxonomic confusion. Molecular Phylogenetics and Evolution 65: 727–738 <b><a href="#"> PDF</a></b></li>
+											<li>Near TJ, Dornburg A, Kuhn KL, Eastman JT, Pennington JN, Patarnello T, Zane L, Fernandez DA, Jones CD. Ancient climate change, antifreeze, and the evolutionary diversification of Antarctic fishes. Proceedings of the National Academy Sciences 109:3434–3439 <b><a href="#"> PDF</a></b></li></span>
 										</ul>
 										<span class="image fit"><img src="images/dock_banner-03.png" height="300" alt="" /></span>
 										<h3>2011</h3>
-										<ul>
-											<li>Dornburg A., Brandley M.C., McGowen M., Near T.J. Rate Heterogeneity, Uncorrelated Relaxed-Clock Models, and Patterns of Molecular Evolution in Cetaceans. Molecular Biology and Evolution 29: 721-736.<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg A., Colosi J.G., Maser C., Reese A.T., Watkins-Colwell G.J. A survey of the Yale Peabody Museum collection of Egyptian mammals collected during the construction of the Aswan high dam: with an emphasis on material from the Yale University prehistoric expedition to Nubia (YUPEN) 1962-1965. Peabody Bulletin of Natural History 52:255-272.<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg A., Sidlauskas B., Sorenson L., Santini F., Near T.J., Alfaro, M.E. The influence of an innovative locomotor strategy on the phenotypic diversification of triggerfishes (Family: Balistidae). Evolution 65:1912–1926.<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg A., Warren D.L., Iglesias T.L., Brandley M.C. Natural history observations of the ichthyological and herpetological fauna on the Island of Curaçao, Netherlands Antilles. Peabody Bulletin of Natural History 52:181–186.<b><a href="#"> PDF</a></b></li>
-											<li>Dornburg A., Beaulieu J.M., Oliver J.C., Near T.J. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527.<b><a href="#"> PDF</a></b></li>
+										<ul><span class="custom_bold">
+											<li>Dornburg A, Brandley MC, McGowen M, Near TJ. Rate Heterogeneity, Uncorrelated Relaxed-Clock Models, and Patterns of Molecular Evolution in Cetaceans. Molecular Biology and Evolution 29: 721-736.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Colosi JG, Maser C, Reese AT, Watkins-Colwell GJ. A survey of the Yale Peabody Museum collection of Egyptian mammals collected during the construction of the Aswan high dam: with an emphasis on material from the Yale University prehistoric expedition to Nubia (YUPEN) 1962-1965. Peabody Bulletin of Natural History 52:255-272.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Sidlauskas B, Sorenson L, Santini F, Near TJ, Alfaro ME. The influence of an innovative locomotor strategy on the phenotypic diversification of triggerfishes (Family: Balistidae). Evolution 65:1912–1926.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Warren DL, Iglesias TL, Brandley MC. Natural history observations of the ichthyological and herpetological fauna on the Island of Curaçao, Netherlands Antilles. Peabody Bulletin of Natural History 52:181–186.<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg A, Beaulieu JM, Oliver JC, Near TJ. Integrating fossil preservation biases in the selection of calibrations for molecular divergence time estimation. Systematic Biology 60: 519-527.<b><a href="#"> PDF</a></b></li></span>
 										</ul>
 										<span class="image fit"><img src="images/Zamami_tidepools_banner-01.png" height="300" alt="" /></span>
 										<ul>
