--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<header>
 									<h2>Welcome to the Evolutionary Informatics Lab</h2>
 									<h3>PI Alex Dornburg</h3>
-									<h2>PLEASE NOTE THIS SITE WILL BE PARTIALLY DOWN 3.11-3.18 for upgrades</h2>
+									<h2>PLEASE NOTE: We are upgrading this site in stages, so some content may be missing. We anticipate completion by late March of 2022 </h2>
 									<p> Our lab integrates tools from genomics, bioinformatics, immunogenetics, and evolutionary biology to provide the basis for forecasting changes in biodiversity as well as unknown aspects of emergent diseases. This work empowers us to effectively respond to global threats to human health and be better stewards of our planet </p>
 								</header>
 								</center>
