--- a/phyinformrMain.html
+++ b/phyinformrMain.html
@@ -47,46 +47,78 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<header class="major">
+						
+
+						<header class="major" >
 							<h2>PhyInformR</h2>
 							<p>This is a walkthrough of PhyInformR broken into three main sections</p>
 						</header>
 
 						<!-- Content -->
 							<section id="content">
+							<div class="div1"> 
 								<h3>Part 1: Installation and Phylogenetic Informativeness Profiles</h3>
-								<p><span class="image left"><img src="images/InformeRlogo.jpg" height="250" alt="" /></span> This section covers the basics of installation and how to get site rates using IQTREE2. Also featured is a demonstration of how to import this external data and the dependencies PhyInformR utilizes.</p><p> Once you have imported your site rate file and your guide tree this section covers how to generate PI profiles as well as a discussion of how to interpret these curves</p>
-								<div class="col-6 col-12-xsmall">
-										<ul class="actions fit small">
-											<li><a href="phyinformrMain.html" class="button primary fit small">Go to Part 1</a></li>
-										</ul>
+								<div class="row">
+									<informrcolumns>
+									<div class="col-6 col-12-xsmall">
+									<div class="button-imgContainer">
+										<div><img src="images/InformeRlogo.jpg" height="250" alt="" /></div>
+										<div class="imgButton"><a href="phyinformrPart1.html" class="button neon"> Go to Part 1</a></div>
 									</div>
+								</div>
+									<div class="col-6 col-12-xsmall">
+									<p> This section covers the basics of installation and how to get site rates using IQTREE2. Also featured is a demonstration of how to import this external data and the dependencies PhyInformR utilizes.</p><p> Once you have imported your site rate file and your guide tree this section covers how to generate PI profiles as well as a discussion of how to interpret these curves</p>
+									</div>
+								</informrcolumns>
+								</div>
+							</div>
+								
 								<p></p>
-								<br></br>
+								<hr />
+							<div class="div2"> 
 								<h3> Part 2: Quantification of Signal and Noise </h3>
-								<p><span class="image left"><img src="images/phyinformR_1.png" height="250" alt="" /></span> template template</p><p>template template</p>
-								<div class="col-6 col-12-xsmall">
-										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">Go to Part 2</a></li>
-										</ul>
+								<div class="row">
+									<informrcolumns>
+									<div class="col-6 col-12-xsmall">
+									<div class="button-imgContainer">
+										<div><img src="images/phyinformR_1.png" height="250" alt="" /></div>
+										<div class="imgButton"><a href="phyinformrPart2.html" class="button neon"> Go to Part 2</a></div>
 									</div>
-								<br></br>
+									</div>
+								<div class="col-6 col-12-xsmall">
+								<p> This section focuses on advanced features and calculations of quartet resolution probabilities </p><p> This calculations derive from Townsend et al. (2012), who introduced theory that takes into the account the interplay of site rates, time, and internode length between species divergences to assess the predicted probabilty of data contributing to accurate topological resolution </p>
+								</div>
+								</informrcolumns>
+								</div>
+							</div>
+								<hr />
+								<div class="div3">
 								<h3>Part 3: Advanced visualizations </h3>
-								<p><span class="image left"><img src="images/Near_et_al_horizon_plot.png" height="250"  alt="" /></span> words</p><p>template</p>
-								<div class="col-6 col-12-xsmall">
-										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">Go to Part 3</a></li>
-										</ul>
-									</div>
+								<div class="row">
+									<informrcolumns>
+									<div class="col-6 col-12-xsmall">
+								<div class="button-imgContainer">
+										<div><img src="images/Near_et_al_horizon_plot.png" height="250" alt="" /></div>
+										<div class="imgButton"><a href="phyinformrPart3.html" class="button neon"> Go to Part 3</a></div>
+								</div>
+							</div>
+							<div class="col-6 col-12-xsmall">
+								 <p>This part focuses on visualization. The quantitative framework of quartet internode calculations lends itself wonderfully to the development of new ways to visualize information in a given dataset. This section highlights how to generate graphics from a recent publications</p><p>We anticipate this to be an area of rapid growth so please check back often for new ways to visualize these metrics. Also, if you develop a new way to view these data please let us know and we will gladly post the code and link(s) to your manuscript(s) </p>
+								</div>
+								</informrcolumns>
+								</div>
+								</div>
 								<p></p>
-								<br></br>
+								<hr />
+								<div class="div4">
 								<h3>Download pdf </h3>
 								<p><a href="https://github.com/carolinafishes/carolinafishes.github.io/tree/master/images/PhyInformR.pdf" class="image left"><img src="images/PhyinformRCover.png" height="300"  alt=""></a> A pdf of this manual is available. Please note that some advanced features in the web instructions may be missing depending on our update schedule.</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="https://github.com/carolinafishes/carolinafishes.github.io/tree/master/images/PhyInformR.pdf" class="button primary fit small">Download pdf</a></li>
+											<li><a href="https://github.com/carolinafishes/carolinafishes.github.io/tree/master/images/PhyInformR.pdf" class="button custom fit">Download pdf</a></li>
 										</ul>
 									</div>
+								</div>
 								<p></p>
 								<br></br>
 
