--- a/phyinformrMain.html
+++ b/phyinformrMain.html
@@ -49,7 +49,7 @@
 					<div class="container">
 						
 
-						<header class="major" >
+						<header class="minor" >
 							<h2>PhyInformR</h2>
 							<p>This is a walkthrough of PhyInformR broken into three main sections</p>
 						</header>
