--- a/phyinformrPart1.html
+++ b/phyinformrPart1.html
@@ -47,7 +47,7 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<header class="major">
+						<header class="minor">
 							<h2>PhyInformR</h2>
 						</header>
 						<!-- Content -->
@@ -165,8 +165,8 @@
 				<br>
 				Using this logic we can break datasets into any size partition we wish to evaluate. Feel free to give this a whirl with other included trees on the <a href='https://github.com/carolinafishes/phyinformR'> github repo</a> or some of our other studies (<a href='https://www.researchgate.net/publication/275103683_Phylogenetic_analysis_of_molecular_and_morphological_data_highlights_uncertainty_in_the_relationships_of_fossil_and_living_species_of_Elopomorpha_%28Actinopterygii_Teleostei%29'>Dornburg et al. 2015</a>; <a href='https://www.researchgate.net/publication/268452611_The_impact_of_shifts_in_marine_biodiversity_hotspots_on_patterns_of_range_evolution_Evidence_from_the_Holocentridae_%28squirrelfishes_and_soldierfishes%29'>Dornburg et al. 2014</a>) to get comfortable. 
 				<br>
-				Now, how about visualizing signal or noise probabilities across a tree?
 				<br>
+				Now, how about visualizing signal or noise probabilities across a tree?
 				<hr />
 				<a href="phyinformrPart2.html" class="button neon">On to Signal & Noise</a>
 				<hr />
