needs more neon

--- a/phyinformrPart1.html
+++ b/phyinformrPart1.html
@@ -53,6 +53,9 @@
 						<!-- Content -->
 							<section id="content">
 								<div class="div1"> 
+								<h3>Overview</h3>
+								<p> This section covers the basics of installation and how to get site rates using IQTREE2. Also featured is a demonstration of how to import this external data and the dependencies PhyInformR utilizes</p><p> Once you have imported your site rate file and your guide tree this section covers how to generate PI profiles</p>
+									
 								<h3>1. Installation</h3>
 								<p>PhyInformR is easy to install. Note that it is currently not on CRAN but will be back following a major update. In the meantime install via devtools or <a href='https://github.com/carolinafishes/PhyInformR'>download the compressed R script from github</a> and install it manually <pre style="text-align: left; white-space: pre-line;"><code> ##cran install is currently not available 
 								#install.packages("PhyInformR") 
