--- a/phyinformrMain.html
+++ b/phyinformrMain.html
@@ -66,7 +66,7 @@
 									</div>
 								
 								</div>
-							</div><br>
+							</div>
 								<hr class="half-width" align=left;/>
 							<div class="div12"> 
 								<h3> Part 2: Quantification of Signal and Noise </h3>
