--- a/current.html
+++ b/current.html
@@ -170,6 +170,16 @@
 								<div class="div10"> 
 
 										<a class="image left">
+										<img src="images/people/Sofia.png"
+										alt="" /></a>
+									<b>Sofia Mizrachi</b><br>
+									<i>Undergraduate, Senior</i><br>
+									Hi, I’m Sofia. I am a senior at UNC Charlotte.  After taking several science classes during my freshman year at UNC Charlotte, I decided to major in Biology.  I have always been interested in children's development as well, which prompted me to get a minor in Child and Family Development.  My goal is to go to medical school and become a pediatrician.
+								</div>
+								<hr />
+								<div class="div11"> 
+
+										<a class="image left">
 										<img src=""
 										alt="" /></a>
 									<b></b><br>
