CSS update and redesign of phyinformr
added escape velocity elements to landing for phyinformr that can organize other code sections

--- a/phyinformrPart1.html
+++ b/phyinformrPart1.html
@@ -53,6 +53,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div class="div1"> 
+								<span class="image"><img src="images/PhyInformR/informrlogo.png" height="200" alt="" /></span>
 								<h3>Overview</h3>
 								<p> This section covers the basics of installation and how to get site rates using IQTREE2. Also featured is a demonstration of how to import this external data and the dependencies PhyInformR utilizes</p><p> Once you have imported your site rate file and your guide tree this section covers how to generate PI profiles</p>
 									
@@ -111,7 +112,7 @@
 					</code></pre>
 					</div>
 					<hr />
-					<div class="div1"> 
+					<div class="div1"> 					
 					<h3>3. Phylogenetic Informativeness Profiles</h3>
 					Townsend's phylogenetic informativeness profiles are a visual tool that enables assessment of the predicted utility of a given sequence for phylogenetic inference across a timescale of interest. Use of this method requires two inputs: site rates and a guide tree
 					<br>
@@ -175,9 +176,11 @@
 				<hr />
 				<a href="phyinformrPart3.html" class="button neon">Skip to Visualization</a>
 
+
 					</section>
 
 					</div>
+
 				</div>
 
 			<!-- Footer -->
