updated meta tags
also added fish icon fixed scaling on PI main page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 -->
 <html>
 	<head>
-		<title>EvIL- Home</title>
+		<title>Evolutionary Informatics Lab | Dr. Alex Dornburg</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Welcome to the Evolutionary Informatics Lab Group of Dr. Alex Dornburg at UNC Charlotte. Meet our team, learn about our research, access publications, tutorials, software, and more!">
+		<meta name="robots" content="index, follow">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/fish.png"
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
@@ -195,7 +198,9 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Evolutionary Informatics Lab. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="https://www.flaticon.com/free-icons/fish" title="fish icons">Fish icons created by Adib Sulthon - Flaticon</a></li>
 					</ul>
+					
 				</footer>
 
 		</div>
