changed link to open new tab

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en" class="icon solid alt major fa-chart-area"></a>
-									<h3><a href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en">Google scholar</a></h3>
+									<a target="_blank" href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en" class="icon solid alt major fa-chart-area"></a>
+									<h3><a target="_blank" href="https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en">Google scholar</a></h3>
 									<p>Follow our work and see where it intersects with the work of others</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
@@ -152,8 +152,8 @@
 									<p>Summaries of our latest papers along with links to pdfs or tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://evil49.github.io/" class="icon solid alt major fa-flask"></a>
-									<h3><a href="https://evil49.github.io/">Lab protocols</a></h3>
+									<a target="_blank" href="https://evil49.github.io/" class="icon solid alt major fa-flask"></a>
+									<h3><a target="_blank" href="https://evil49.github.io/">Lab protocols</a></h3>
 									<p>This is mostly for lab members and links to lab protocols and tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
@@ -162,13 +162,13 @@
 									<p>Photos of various places, plants, and animals </p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://evil49.github.io/writing.html" class="icon solid alt major fa-file"></a>
-									<h3><a href="https://evil49.github.io/writing.html">Manuscript preparation</a></h3>
+									<a target="_blank" href="https://evil49.github.io/writing.html" class="icon solid alt major fa-file"></a>
+									<h3><a target="_blank" href="https://evil49.github.io/writing.html">Manuscript preparation</a></h3>
 									<p>Links to writing tips and guides</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://evil49.github.io/meetings.html" class="icon solid alt major fa-lock"></a>
-									<h3><a href="https://evil49.github.io/meetings.html">Members only</a></h3>
+									<a target="_blank" href="https://evil49.github.io/meetings.html" class="icon solid alt major fa-lock"></a>
+									<h3><a target="_blank" href="https://evil49.github.io/meetings.html">Members only</a></h3>
 									<p>Link to lab meeting schedule for lab members</p>
 								</section>
 							</div>
@@ -197,8 +197,8 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Evolutionary Informatics Lab. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						<li><a href="https://www.flaticon.com/free-icons/fish" title="fish icons">Fish icons created by Adib Sulthon - Flaticon</a></li>
+						<li>&copy; Evolutionary Informatics Lab. All rights reserved.</li><li>Design: <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
+						<li><a target="_blank" href="https://www.flaticon.com/free-icons/fish" title="fish icons">Fish icons created by Adib Sulthon - Flaticon</a></li>
 					</ul>
 					
 				</footer>
