--- a/publications.html
+++ b/publications.html
@@ -58,20 +58,20 @@
 									<ul>
 											<li>Townsend JP, Lamb AD, Hassler HB, Sah P, Nishio AA, Nguyen C, Galvani AP, & Dornburg A.
 													Projecting the seasonality of endemic COVID-19. In bioRxiv.
-													<b><a href="/pubs/Townsend2022.pdf">PDF</a></b></li>
+													<b><a target="_blank" href="https://www.medrxiv.org/content/10.1101/2022.01.26.22269905v1">PDF</a></b></li>
 
 											<li>Dornburg A, Zapfe KL, Williams R, Alfaro ME, Morris R, Adachi H, Flores J, Santini F,
 													Near TJ, & Frédérich B. Considering decoupled phenotypic diversification between ontogenetic
 													phases in macroevolution: An example using Triggerfishes (Balistidae). In bioRxiv (p. 2022.01.11.475856).
-													<b><a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1">PDF</a></b></li>
+													<b><a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1">PDF</a></b></li>
 
 											<li>Ghezelayagh A, Harrington RC, Burress ED, Campbell MA, Buckner JC, Chakrabarty P, Glass JR,  McCraney T,
 												Unmack PJ, Thacker CE, Alfaro ME, Friedman ST, Ludt WB, Cowman PF, Friedman M, Price S A, Dornburg
 											 	A, Faircloth BC, Wainwright PC, & Near TJ. Prolonged morphological expansion of spiny-rayed fishes following
 												the end-Cretaceous. In bioRxiv; accepted Nature Ecology & Evolution.
-												<b><a href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">PDF</a></b></li>
+												<b><a target="_blank" href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">PDF</a></b></li>
 
-											<li>Carlson KB, Wcisel DJ, Ackerman HD, Romanet J, Christiansen EF, Niemuth JN, Williams C, Breen M, Stoskopf M, Dornburg A, and Yoder JA. Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, Anaxyrus baxteri. Research Square; Submitted to Conservation Genetics<b><a href="https://assets.researchsquare.com/files/rs-1265947/v1/effd5c7e-592f-4170-9f1c-bc9b0dbfbb67.pdf?c=1644939558"> PDF</a></b></li>
+											<li>Carlson KB, Wcisel DJ, Ackerman HD, Romanet J, Christiansen EF, Niemuth JN, Williams C, Breen M, Stoskopf M, Dornburg A, and Yoder JA. Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, Anaxyrus baxteri. Research Square; Submitted to Conservation Genetics<b><a target="_blank" href="https://assets.researchsquare.com/files/rs-1265947/v1/effd5c7e-592f-4170-9f1c-bc9b0dbfbb67.pdf?c=1644939558"> PDF</a></b></li>
 									</ul>
 									
 								<h3><b>Publications</b></h3>
@@ -98,16 +98,16 @@
 											<li>Townsend JP, Hassler HB, Wang Z, Miura S, Singh J, Kumar S, Ruddle NH, Galvani AP & Dornburg
 												A. The durability of immunity against reinfection by SARS-CoV-2: a comparative evolutionary study. <i>The Lancet Microbe</i>, 
 												2(12), e666–e675.
-												<b><a href="https://www.thelancet.com/journals/lanmic/article/PIIS2666-5247(21)00219-6/fulltext">PDF</a></b></li>
+												<b><a target="_blank" href="https://www.thelancet.com/journals/lanmic/article/PIIS2666-5247(21)00219-6/fulltext">PDF</a></b></li>
 
 											<li> Thompson AW, Hawkins MB, Parey E et al .The bowfin genome illuminates the developmental evolution of ray-finned
 												fishes. <i>Nature Genetics</i> 53, 1373–1384.
-												<b><a href="https://www.nature.com/articles/s41588-021-00914-y">PDF</a></b></li>
+												<b><a target="_blank" href="https://www.nature.com/articles/s41588-021-00914-y">PDF</a></b></li>
 
 											<li> Lamb AD, Lippi CA, Watkins-Colwell GJ, Jones A, Warren DL, Iglesias TL, Brandley MC, &
 												Dornburg A. Comparing the dietary niche overlap and ecomorphological differences between invasive Hemidactylus
 												mabouia geckos and a native gecko competitor. <i>Ecology and Evolution</i>, 11(24), 18719–18732.
-												<b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.8401">PDF</a></b></li>
+												<b><a target="_blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.8401">PDF</a></b></li>
 
  											<li>Dornburg A, Ota T, Criscitiello MF, Salinas I, Sunyer JO, Magadán S, Boudinot P, Xu Z, Flajnik
 											MF, Singer A, Gambón-Deza F, Hansen JD, & Yoder JA. From IgZ to IgT: A Call for a Common Nomenclature
@@ -126,17 +126,17 @@
 
 											<li>Warren DL, Eytan RI, Dornburg A, Iglesias TL, Brandley MC, & Wainwright PC. Reevaluating
 												 claims of ecological speciation in Halichoeres bivittatus. <i>Ecology and Evolution</i>, 11(16), 11449–11456.
-												 <b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.7936">PDF</a></b></li>
+												 <b><a target="_blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.7936">PDF</a></b></li>
 
 											<li>Warren DL, Dornburg A, Zapfe K, & Iglesias TL. The effects of climate change on Australia’s only
 												endemic Pokémon: Measuring bias in species distribution models. <i>Methods in Ecology and Evolution </i>, 
 												12(6), 985–995.
-												<b><a href="https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13591">PDF</a></b></li>
+												<b><a target="_blank" href="https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13591">PDF</a></b></li>
 
 											<li>Dornburg A, Wang Z, Wang J, Mo ES, López-Giráldez F, & Townsend JP. Comparative Genomics within and across
 												Bilaterians Illuminates the Evolutionary History of ALK and LTK Proto-Oncogene Origination and Diversification. <i>Genome Biology and
 												Evolution</i>, 13(1).
-												<b><a href="https://academic.oup.com/gbe/article/13/1/evaa228/5983394">PDF</a></b></li>
+												<b><a target="_blank" href="https://academic.oup.com/gbe/article/13/1/evaa228/5983394">PDF</a></b></li>
 										</ul>
 										</span>
 										<span class="image fit"><img src="images/publicationsBanner3.jpg" height="300" alt="" /></span>
