--- a/current.html
+++ b/current.html
@@ -180,12 +180,13 @@
 								<div class="div11"> 
 
 										<a class="image left">
-										<img src=""
+										<img src="images/people/Kevin.jpg"
 										alt="" /></a>
-									<b></b><br>
-									<i></i><br>
-										
+									<b>Kevin Zhang</b><br>
+									<i>Undergraduate, Senior</i><br>
+									I'm Kevin. A senior planning to graduate this Spring at UNC Charlotte with a bachelor's of science in mathematics with a minor in biology. After my undergraduate program I am planning on pursuing my master's of science in biostatistics at UNC Chapel Hill. I have a great interest in the study of infectious diseases. 
 								</div>
+								<hr />
 							</div>	
 
 					</div>
