--- a/current.html
+++ b/current.html
@@ -180,7 +180,7 @@
 								<div class="div11"> 
 
 										<a class="image left">
-										<img src="images/people/Kevin.jpg"
+										<img src="images/people/Kevin.png"
 										alt="" /></a>
 									<b>Kevin Zhang</b><br>
 									<i>Undergraduate, Senior</i><br>
