--- a/publications.html
+++ b/publications.html
@@ -81,17 +81,17 @@
 												& Townsend JP. Premetastatic shifts of endogenous and exogenous mutational processes support consolidative
 												therapy in EGFR-driven lung adenocarcinoma. 
 												<i>Cancer Letters</i>, 526, 346–351.
-												<b><a href="/pubs/Fisk et al. 2022.pdf">PDF</a></b></li>
+												<b><a href="/papers/Fisk et al. 2022.pdf">PDF</a></b></li>
 
 											<li>Dornburg A, & Yoder JA. On the relationship between extant innate immune receptors and the evolutionary
 												origins of jawed vertebrate adaptive immunity. 
 												<i>Immunogenetics</i>, 74(1), 111–128.
-												<b><a href="/pubs/Dornburg et al. 2022 - Considering.pdf">PDF</a></b></li>
+												<b><a href="/papers/Dornburg et al. 2022 - Considering.pdf">PDF</a></b></li>
 
 											<li>Parker E, Dornburg A, Struthers CD, Jones CD, & Near TJ. Phylogenomic species delimitation
 												dramatically reduces species diversity in an Antarctic adaptive radiation. 
 												<i>Systematic Biology</i>.
-												<b><a href="/pubs/Parker et al. 2022.pdf">PDF</a></b></li>
+												<b><a href="/papers/Parker et al. 2022.pdf">PDF</a></b></li>
 										</ul></span>
 										<span class="image fit"><img src="images/publicationsBanner2.jpg" height="300" alt="" /></span>
 
@@ -118,16 +118,16 @@
 												MF, Singer A, Gambón-Deza F, Hansen JD, & Yoder JA. From IgZ to IgT: A Call for a Common Nomenclature
 											 	for Immunoglobulin Heavy Chain Genes of Ray-Finned Fish. 
 											 	<i>Zebrafish</i>, 18(6), 343–345.
-												<b><a href="Dornburg et al. 2021 - From IgZ.pdf">PDF</a></b></li>
+												<b><a href="papers/Dornburg et al. 2021 - From IgZ.pdf">PDF</a></b></li>
 
 											<li>Dornburg A, Wcisel DJ, Zapfe K, Ferraro E, Roupe-Abrams L, Thompson AW, Braasch I, Ota T, & Yoder JA. Holosteans contextualize the role of the teleost genome duplication in promoting the rise of evolutionary novelties
 												 in the ray-finned fish innate immune system.
 												 <i> Immunogenetics</i>, 73(6), 479–497.
-												 <b><a href="Dornburg et al. 2021 - Holostens.pdf">PDF</a></b></li>
+												 <b><a href="papers/Dornburg et al. 2021 - Holostens.pdf">PDF</a></b></li>
 
 											<li>Dornburg A, & Near TJ. The Emerging Phylogenetic Perspective on the Evolution of Actinopterygian Fishes. 
 												 <i>Annual Review of Ecology, Evolution, and Systematics</i>.
-												 <b><a href="Dornburg et al. 2021 - Emerging">PDF</a></b></li>
+												 <b><a href="papers/Dornburg et al. 2021 - Emerging">PDF</a></b></li>
 
 											<li>Sigler K, Warren D, Tracy B, Forrestel E, Hogue G, Dornburg A. Assessing bias in aggregated historical spatial data: A case study of North Carolina’s freshwater fishes.
 											 	<i>Ecosphere</i>, 10.1002/ ecs2.3878, 12, 12,
@@ -156,22 +156,22 @@
 											<li>Daane JM, Dornburg A, Smits P, MacGuigan DJ, Hawkins MB, Near TJ, Detrich HW Harris MP. Historical
 												contingency shapes adaptive radiation in Antarctic fishes.
 												<i>Nature Ecology and Evolution	</i> 3: 1102—1109
-												<b><a href="Daane et al. 2019.pdf"> PDF</a></b></li>
+												<b><a href="papers/Daane et al. 2019.pdf"> PDF</a></b></li>
 
 											<li>Wcisel DJ, Howard JT, Yoder JA, Dornburg A. Transcriptome ortholog alignment sequence tools (TOAST) for
 												phylogenomic dataset assembly.
 												<i>BMC evolutionary biology.</i> Dec (20):1-0
-												<b><a href="Wcisel et al. 2020.pdf"> PDF</a></b></li>
+												<b><a href="papers/Wcisel et al. 2020.pdf"> PDF</a></b></li>
 
 											<li>Parker E, Jones CD, Arana PM, Alegría NA, Sarralde R, Gallardo F, Phillips AJ, Williams BW, Dornburg A.
 												Infestation dynamics between parasitic Antarctic fish leeches (Piscicolidae) and their crocodile icefish
 												hosts (Channich- thyidae).
 												<i>Polar Biology</i> 43: 665—77
-												<b><a href="Parket et al. 2020.pdf"> PDF</a></b></li>
+												<b><a href="papers/Parker et al. 2020.pdf"> PDF</a></b></li>
 
 											<li>Somarelli JA, Gardner H, Cannataro V, Gunady EF, Boddy AM, Johnson NA, Fisk JN, Gaffney SG, Chuang JH, Li S, Ciccarelli FD, Panchenko AR, Megquier K, Kumar S, Dornburg A, DeGregori J, Townsend JP. Molecular biology and evolution of cancer: from discovery to action.
 												<i>Molecular Biology and Evolution</i> 37: 320—326
-												<b><a href="Somarelli et al. 2020.pdf"> PDF</a></b></li>
+												<b><a href="papers/Somarelli et al. 2020.pdf"> PDF</a></b></li>
 											</span>
 										</ul>
 										<span class="image fit"><img src="images/publicationsBanner1.jpg" height="300" alt="" /></span>
@@ -182,26 +182,26 @@
 												modern birds and the importance of modelling molecular rate variation. In book: Pennaraptoran theropod dinosaurs:
 												 Past progress and new frontiers (pp.159-181).
 												 <i>Bulletin of the American Museum of Natural History</i>, New York
-												 <b><a href="Field et al. 2019.pdf"> PDF</a></b></li>
+												 <b><a href="papers/Field et al. 2019.pdf"> PDF</a></b></li>
 
 											<li>Phillips AJ, Dornburg A, Zapfe K, James SW, Erseus C, Anderson F, Lemmon A, Lemmon EM, Holland S, Williams BW.
 												Phylogenomic analysis of a putative missing link sparks reinterpretation of leech evolution.
 													<i>Genome Biology and Evolution</i> 11: 1712—1722
-													<b><a href="Phillips et al. 2019.pdf"> PDF</a></b></li>
+													<b><a href="papers/Phillips et al. 2019.pdf"> PDF</a></b></li>
 
 											<li>Near TJ, Ghezelayagh A, Ojeda FP, Dornburg A. Recent diversification in an ancient lineage of Notothenioid fishes.
 												 <i>Polar Biology</i> 42: 943—952
-												 <b><a href="Near et al. 2019.pdf"> PDF</a></b></li>
+												 <b><a href="papers/Near et al. 2019.pdf"> PDF</a></b></li>
 
 											<li>Parker CE, Dornburg A, Domínguez-Domínguez O, Pillar KR. Assessing phylogenetic information to reveal uncertainty
 												in historical data: an example using goodeines (Teleostei: Cyprinodontiformes: Goodeidae).
 												<i>Molecular Phylogenetics and Evolution</i> 134: 282—290
-												<b><a href="Parker et al. 2019.pdf"> PDF</a></b></li>
+												<b><a href="papers/Parker et al. 2019.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Lamb AD, Warren D, Watkins-Colwell G, Lewbart G, Flowers J. Are geckos paratenic hosts for Caribbean
 												Island Acanthocephalans? Evidence from Gonatodes antillensis and a review of squamate reptiles acting as transport hosts.
 												<i>Peabody Bulletin of Natural History</i> 60:55-79
-												<b><a href="Dornburg et al. 2019"> PDF</a></b></li></span>
+												<b><a href="papers/Dornburg et al. 2019"> PDF</a></b></li></span>
 										</ul>
 
 										<span class="image fit"><img src="images/publicationsBanner4.jpg" height="300" alt="" /></span>
@@ -211,21 +211,21 @@
 											<li>Near TJ, MacGuigan D, Parker CE, Jones C, Struthers C, Dornburg A. Phylogenetic analysis of Antarctic notothenioids
 												illuminates the utility of RADseq for resolving Cenozoic adaptive radiations.
 												<i> Molecular Phylogenetics and Evolution</i> 129: 268—279
-												<b><a href="Near et al. 2018.pdf"> PDF</a></b></li>
+												<b><a href="papers/Near et al. 2018.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Zhou S, Townsend JP. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets.
 												<i>Systematic Biology</i> 68: 145—156
-												<b><a href="Dornburg et al. 2018 - Optimal.pdf"> PDF</a></b></li>
+												<b><a href="papers/Dornburg et al. 2018 - Optimal.pdf"> PDF</a></b></li>
 
 											<li>Iglesias TL*, Dornburg A*, Warren DL, Wainwright PC, Schmitz L, Economo EP. Eyes-Wide Shut: the impact of
 												dim-light vision on neural investment in marine teleosts. <i>Journal of Evolutionary Biology
 												</i> 31: 1082—1092(*co-first authors)
-												<b><a href="Iglesias et al. 2018.pdf"> PDF</a></b></li>
+												<b><a href="papers/Iglesias et al. 2018.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Warren D, Zapfe K, Morris R, Lamb A, Hogue G, Lukas L, Wang R. Testing ontogenetic patterns of
 												sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specific example using Oyster Toadfish (Opsanus tau).
 												<i>Ecology and Evolution</i> 8 (7):3609—3616
-												<b><a href="Dornburg et al. 2018 - Testing.pdf"> PDF</a></b></li></span>
+												<b><a href="papers/Dornburg et al. 2018 - Testing.pdf"> PDF</a></b></li></span>
 										</ul>
 
 										<span class="image fit"><img src="images/publicationsBanner5.jpg" height="300" alt="" /></span>
@@ -234,27 +234,27 @@
 										<ul><span class="custom_bold">
 											<li>Dornburg A, Lamb A, Federman S, Jones C, Near TJ. Cradles and Museums of Antarctic Biodiversity.
 												<i>Nature Ecology and Evolution</i>. DOI: 10.1038/s41559-017-0239-y
-												<b><a href="Dornburg et al. 2017 - Cradles.pdf"> PDF</a></b></li>
+												<b><a href="papers/Dornburg et al. 2017 - Cradles.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Townsend JP, Wang Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated
 												by fungal big data. In JP Townsend & Z Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47).
 												<i>Advances in Genetics</i> volume 100. Cambridge, MA: Academic Press
-												<b><a href="Advances-in_Genetics100.pdf"> PDF</a></b></li>
+												<b><a href="papers/Advances-in_Genetics100.pdf"> PDF</a></b></li>
 
 											<li>Lamb AJ, Watkins-Colwell GC, Moore JA, Iglesias T, Warren DL, Brandley MC, Dornburg A. Endolymphatic sac use
 												and reproductive activity in the Lesser Antilles endemic gecko <i>Gonatodes antillensis</i> (Gekkota: Spaerodactylidae).
 												<i>Bulletin of the Peabody Museum of Natural History</i> 58(1):17—29
-												<b><a href="Lamb et al. 2017.pdf"> PDF</a></b></li>
+												<b><a href="papers/Lamb et al. 2017.pdf"> PDF</a></b></li>
 
 											<li>Chakrabarty P, Faircloth BC, Ludt WB, McMahan CD, Near TJ, Dornburg A, Albert JS, Arroyave J, Stiassny MJ,
 												Sorenson L, Alfaro ME. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes.
 												<i>Systematic Biology</i> 66(6): 881—895
-												<b><a href="Chakrabarty et al. 2017.pdf"> PDF</a></b></li>
+												<b><a href="papers/Chakrabarty et al. 2017.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Townsend JP, Spriggs E, Eytan RI, Moore JA, Wainwright PC,Lemmon AR, Moriarty Lemmon E, Near TJ.
 												Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset.
 												<i>Molecular Phylogenetics and Evolution</i> 110: 27—38
-												<b><a href="Dornburg et al. 2017 - Phylogenetic"> PDF</a></b></li></span>
+												<b><a href="papers/Dornburg et al. 2017 - Phylogenetic"> PDF</a></b></li></span>
 										</ul>
 
 										<span class="image fit"><img src="images/publicationsBanner8.jpg" height="300" alt="" /></span>
@@ -264,7 +264,7 @@
 											<li>Federman S, Dornburg A, Daly DC, Downie A, Yoder AD, Sargis EJ, Perry GH, Donoghue, MJ, Richard AF, Baden AL.
 												Implications of lemuriform extinctions for the Malagasy flora. 
 												<i>Proceedings of Natural Academy of Sciences</i> 113: 5041—5046
-												<b><a href="Federman et al. 2016.pdf"> PDF</a></b></li>
+												<b><a href="papers/Federman et al. 2016.pdf"> PDF</a></b></li>
 
 											<li>Dornburg A, Forrestel E, Moore JA, Iglesias TL, Jones A, Rao L, Warren DL. Fish at night: what we don’t know. Assessing sampling biases across studies of diel activity patterns in marine ray-finned fishes (Actinopterygii). <i>Bulletin of Marine Science</i> 93 (2): 611—639<b><a href="#"> PDF</a></b></li>
 											<li>Dornburg A, Smith C, Federman S, Moore JA, Warren DL, Iglesias T, Brandley MC, Watkins-Colwell GJ, Lamb AD, Jones A. Disentangling the influence of urbanization and invasion on endemic reptiles in tropical biodiversity hotspots: A case study of <i>Phyllodactylus martini </i>along an urban gradient in Curaçao. <i>Peabody Bulletin of Natural History</i> 57: 147—164<b><a href="#"> PDF</a></b></li>
