--- a/current.html
+++ b/current.html
@@ -187,6 +187,7 @@
 									I'm Kevin. A senior planning to graduate this Spring at UNC Charlotte with a bachelor's of science in mathematics with a minor in biology. After my undergraduate program I am planning on pursuing my master's of science in biostatistics at UNC Chapel Hill. I have a great interest in the study of infectious diseases. 
 								</div>
 								<hr />
+								<div class="div12">
 							</div>	
 
 					</div>
