--- a/alumni.html
+++ b/alumni.html
@@ -53,8 +53,15 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-								<h3>Coming soon!</h3>
+								<div class="div1"> 
+										<a class="image left">
+										<img src="images/people/AprilAlt.png"
+										alt="" /></a>
+									<b>April Lamb</b><br>
+									<i>Research Technician</i><br>
+										April is a former Research Technician in the Dornburg Lab. She received her Masters degree in Biology, Ecology and Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina State University. She is also a 2017 National Science Foundation Graduate Research Fellow and holds a Bachelor's degree in Zoology from NC State. Broadly, April is interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management decisions. April now works as a Scientific Technical Editor for the NC Insitute for Climate Studies in Asheville, NC.<br>
+										<a href='https://scholar.google.com/citations?hl=en&user=-JnzNdcAAAAJ'> Google scholar </a>
+								</div>
 							</section>
 
 					</div>
